# http-api-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_audit_table.rs
src/: env.rs  health.rs  main.rs
src/entities/: audit.rs  mod.rs  prelude.rs
