[package]
name = "http-api-rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.2"
log = "0.4"
futures = "0.3"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
sea-orm = { version = "^0.12.11", features = [ "sqlx-sqlite", "runtime-actix-rustls", "macros", "mock" ] }

[workspace]
members = [".", "migration"]
